--- a/count/index.html
+++ b/count/index.html
@@ -10,9 +10,9 @@
     <div id="counter">
         <p id="count">o</p>
         <div id="button">
-           <button id="incre">+</button>
-           <button id="decre">-</button>
-           <button id="reset">reset</button>
+           <button onclick="incre()">+</button>
+           <button onclick="decre()">-</button>
+           <button onclick="reset()">reset</button>
         </div>
     </div>
     <script src="./script.js"></script>
